--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
       <div class="header_section header_bg">
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+              <div class="logo"><a href="index.html"><p style="font-size:26px;color:white">Muhammad <span style="color:#f5c729">Usman</span></p></a></div>
                <div class="contact-info d-none d-lg-flex mr-auto" style="color: #fefefd; margin-left: 20px;">
                   <div style="margin-right: 20px;">
                      <i class="fa fa-envelope" aria-hidden="true" style="color: #f5c729; margin-right: 5px;"></i>
